tests/fixtures/valid/run_while.nl
fn main -> i64
    let value i64 = 0
    while value < 4
        value += 1
    value
