tests/fixtures/invalid/main_with_parameter.nl
fn main value i64 -> i64
    value
